fixing spacing in hover over cart

--- a/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
+++ b/Presentation/Nop.Web/Themes/DefaultClean/Content/styles.css
@@ -1304,10 +1304,12 @@ td.fieldname {
 }
 
 .block a {
-	color: #5C5B5B;
-	font-size: 1.1em;
-	font-weight: 400;
+	color: #323232;
+	font-size: 13px;
+	font-weight: bold;
 	text-decoration: none;
+	text-transform: uppercase;
+	font-family: "BreeBold";
 }
 
 .block a:hover {
@@ -1528,6 +1530,10 @@ td.fieldname {
 	
 }
 
+.mini-shopping-cart .item .product > div {
+	margin-bottom: 5px;
+}
+
 .mini-shopping-cart .item > div {
 	padding: 10px 5px;
 }
@@ -1561,10 +1567,6 @@ td.fieldname {
 .mini-shopping-cart .item .price span {
 	color: #bd0a2f;
 	font-weight: bold;
-}
-
-.mini-shopping-cart .item .quantity {
-	margin-top: 4px;
 }
 
 .mini-shopping-cart .totals {
